Ajuste de galeria de inicio

--- a/index.njk
+++ b/index.njk
@@ -157,7 +157,7 @@ permalink: "/"
                      /images/salon-sofa-cama-960.jpg 960w"
              sizes="(max-width: 900px) 100vw, 33vw"
              alt="Salón-comedor de Casa Bardena Negra"
-             width="800" height="533"
+             width="480" height="480"
              loading="lazy" decoding="async" />
       </picture>
     </figure>
@@ -175,7 +175,7 @@ permalink: "/"
                      /images/cocina-equipada-960.jpg 960w"
              sizes="(max-width: 900px) 100vw, 33vw"
              alt="Cocina totalmente equipada"
-             width="800" height="533"
+             width="480" height="480"
              loading="lazy" decoding="async" />
       </picture>
     </figure>
@@ -185,13 +185,15 @@ permalink: "/"
         <source type="image/webp"
           srcset="/images/terraza-480.webp 480w,
                   /images/terraza-640.webp 640w"
+                  /images/terraza-960.webp 960"
           sizes="(max-width: 900px) 100vw, 33vw">
         <img src="/images/terraza-640.jpg"
              srcset="/images/terraza-480.jpg 480w,
-                     /images/terraza-640.jpg 640w"
+                     /images/terraza-640.jpg 640w,
+                     /images/terraza-960.jpg 960w"
              sizes="(max-width: 900px) 100vw, 33vw"
              alt="Jardín con terraza y barbacoa"
-             width="670" height="447"
+             width="480" height="480"
              loading="lazy" decoding="async" />
       </picture>
     </figure>
