--- a/index.njk
+++ b/index.njk
@@ -125,7 +125,7 @@ permalink: "/"
         </div>
       </div>
       <div style="margin-top:1rem">
-        <a href="/la-casa/" class="btn alt">Ver detalles y galería</a>
+        <a href="/la-casa/" class="btn alt">Ver detalles</a>
       </div>
     </div>
 
