Intento de fix de bug del header.

--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -57,7 +57,7 @@ title: ""
   <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
-  <header class="site-header" id="siteHeader">
+  <header class="site-header notranslate" id="siteHeader">
     <div class="container nav">
       <a href="/" class="brand" aria-label="{{ site.name }} — Inicio">
         <img
